Starting to add Danielle edits

--- a/ch6-ds.tex
+++ b/ch6-ds.tex
@@ -256,7 +256,7 @@ First column shows raw scores (percentiles for behavior scores and negative log-
 \begin{figure}[tbhp]
 \centering
 \includegraphics[width=\linewidth]{figures/pmatrix.pdf}
-\caption{Heatmap of raw p-values for tested Behavioral-ROI correlation tests. Only showing $p < 0.1$.}
+\caption{Heatmap of raw p-values for Behavioral-ROI correlations. Only showing $p < 0.1$.}
 \label{fig:full-roi-corr}
 \end{figure}
 
