Fleshed out SOM analysis some more

--- a/ch2-background.tex
+++ b/ch2-background.tex
@@ -21,7 +21,7 @@ A score is defined as the gradient of the log probability density, with respect 
     J_{ESM}(\theta) &= \mathbb{E}_{x \sim q_{\sigma}(x)} \frac{1}{2} \s{ \norm{s_\theta(x) - \nabla_x \log q_{\sigma}(x) }^2 }
 \end{align}
 
-\cite{vincent2011connection} proved that under certain regularity conditions\footnote{For any window size $\sigma > 0$, the kernel $q_{\sigma}$ is differentiable, converges to 0 at infinity, and has a finite gradient norm},
+\cite{vincent2011connection} proved that under certain regularity conditions,\footnote{For any window size $\sigma > 0$, the kernel $q_{\sigma}$ is differentiable, converges to 0 at infinity, and has a finite gradient norm}
 the Parzen window based objective is equivalent to the original objective proposed by \cite{hyvarinen2005} in \eqnref{eq:implicit_sm}
 
 Taking it one step further, assume the Parzen density estimate is chosen to estimate the joint density of clean and \textit{corrupted} samples $(x, \tilde{x})$ i.e. $q_{\sigma}(x, \tilde{x}) = q_{\sigma}(x | \tilde{x} ) p(x) $. Thus, the DSM objective is simply:
@@ -30,7 +30,7 @@ Taking it one step further, assume the Parzen density estimate is chosen to esti
     J_{DSM}(\theta) &= \mathbb{E}_{\tilde{x}\sim q_{\sigma}(x, \tilde{x})} \frac{1}{2} \s{ \norm{s_\theta(\tilde{x}) - \nabla_{\tilde{x}} \log q_{\sigma}(\tilde{x} | x ) }^2 }
 \end{align}
 
-DSM mitigates the need for computing second order gradients as is the case for \eqnref{eq:implicit_sm}. Furthermore, if $q_{\sigma}$ is set as the Gaussian kernel $\mathcal{N}(\tilde{x} |  x,\,\sigma^{2}I)$, then $\nabla_x \log q_{\sigma}(\tilde{x}) = \frac{(x - \tilde{x})}{\sigma}$. One can now see the connection between score matching and the denoising autoencoder objective (When using a Gaussian kernel). The score model is effectively being trained to estimate the \textit{noise} that was added to the image.
+DSM mitigates the need for computing second order gradients as is the case for \eqnref{eq:implicit_sm}. Furthermore, if $q_{\sigma}$ is set as the Gaussian kernel $\mathcal{N}(\tilde{x} |  x,\,\sigma^{2}I)$, then $\nabla_x \log q_{\sigma}(\tilde{x}) = \frac{(x - \tilde{x})}{\sigma}$. One can now see the connection between score matching and the denoising autoencoder objective (when using a Gaussian kernel). The score model is effectively being trained to estimate the \textit{noise} that was added to the image.
 
 It should be emphasized that while~\cite{vincent2011connection} and many subsequent works \cite{Song2019,song2020improved,song2020score}, use the Gaussian distribution in DSM, the proof for the validity of the objective by~\cite{vincent2011connection} holds for \textit{any} differentiable noise distribution.
 I will make use of this fact when deriving a score matching objective for categorical data in Chapter~\ref{ch:gnsm}.
@@ -63,20 +63,20 @@ This thesis will specifically focus on \textit{unsupervised} anomaly detection. 
 
 Perhaps the most common paradigm for detecting anomalous samples is to use the probability density estimate. The principal assumption here is that anomalies are located in low-density regions in the probability space. The objective is to learn the density function representative of the typical (training) data. A trained model is used to assign probabilities to test samples, with low probabilities signifying anomalies.
 
-\textbf{Mixture models} estimate the parameters for a mixture of probability distributions, which are then used in conjunction to estimate likelihood of the data. Gaussian Mixture Models (GMMs)~\cite{reynolds2009gaussian} are one of the most popular examples of a mixture model, where the probability is estimated from the weighted sum of Normal distributions. ~\cite{zong2018deep} introduced Deep Autoencoding Gaussian Mixture Models (DAGMM), an unsupervised anomaly detection model based on GMMs. They combined the reconstruction objective of autoencoders with the likelihood objective of mixture models. The resulting network estimates the likelihood of the \textit{low-dimensional embedding} of a data point, as obtained by the encoder network of the autoencoder. 
+\textit{Mixture models} estimate the parameters for a mixture of probability distributions, which are then used in conjunction to estimate likelihood of the data. Gaussian Mixture Models (GMMs)~\cite{reynolds2009gaussian} are one of the most popular examples of a mixture model, where the probability is estimated from the weighted sum of Normal distributions. ~\cite{zong2018deep} introduced Deep Autoencoding Gaussian Mixture Models (DAGMM), an unsupervised anomaly detection model based on GMMs. They combined the reconstruction objective of autoencoders with the likelihood objective of mixture models. The resulting network estimates the likelihood of the low-dimensional embedding of a data point, as obtained by the encoder network of the autoencoder. 
 
-Certain deep generative models also allow for the estimation of probability densities. \textbf{Autoregressive} models such as Glow and PixelCNN (and their earlier counterparts, NADE and MADE) allow direct access to density estimates. However,~\cite{nalisnick2018do} showed that deep likelihood models often fail to detect out-of-distribution samples.
+Certain deep generative models also allow for the estimation of probability densities. \textit{Autoregressive} models such as Glow and PixelCNN (and their earlier counterparts, NADE and MADE) allow direct access to density estimates. However,~\cite{nalisnick2018do} showed that deep likelihood models often fail to detect out-of-distribution samples.
 
-\textbf{Normalizing flow models} are a flexible class of generative models. They utilize invertible transformations to project the data into the space of a predefined base distribution, such as a Standard Gaussian. Examples of deep normalizing flows are models such as RealNVP~\cite{dinh2017density} or Neural Spline Flows~\cite{NEURIPS2019_7ac71d43}, which are typically trained via the maximum likelihood objective. However, these models fail to detect outlying samples much like deep autoregressive models. The work by ~\cite{normflow_fails} investigated the failure cases of flow models. The authors analyses suggest that flow models encode the visual appearance directly, without learning any semantic content. The anomaly detection performance of flow-based models can improve if they are trained on high-level semantic representations (e.g. from a pretrained neural network) rather than the raw images themselves. 
+\textit{Normalizing flow models} are a flexible class of generative models. They utilize invertible transformations to project the data into the space of a predefined base distribution, such as a Standard Gaussian. Examples of deep normalizing flows are models such as RealNVP~\cite{dinh2017density} or Neural Spline Flows~\cite{NEURIPS2019_7ac71d43}, which are typically trained via the maximum likelihood objective. However, these models fail to detect outlying samples much like deep autoregressive models. The work by ~\cite{normflow_fails} investigated the failure cases of flow models. The authors analyses suggest that flow models encode the visual appearance directly, without learning any semantic content. The anomaly detection performance of flow-based models can improve if they are trained on high-level semantic representations (e.g. from a pretrained neural network) rather than the raw images themselves. 
 
 
-\textbf{Variational Autoencoders}~\cite{kingma2013auto} are another branch of generative models that utilize a latent variable factorization to approximate the density. While their behaviour on out-of-distribution samples has not been systematically studied, as with deep likelihood models, they empirically show middling performance as anomaly detectors~\cite{baur2021,kascenasRoleNoiseDenoising2023}.
+\textit{Variational Autoencoders}~\cite{kingma2013auto} are another branch of generative models that utilize a latent variable factorization to approximate the density. While their behaviour on out-of-distribution samples has not been systematically studied, as with deep likelihood models, they empirically show middling performance as anomaly detectors~\cite{baur2021,kascenasRoleNoiseDenoising2023}.
 
-Lastly, many \textbf{non-deep learning} approaches are still being developed for anomaly detection. COPOD~\cite{copod} is a parameter-free, highly interpretable outlier detection algorithm based on empirical copula models. DoSE~\cite{pmlr-dose} uses Kernel Density Estimates for learning the distribution of an ensemble of data statistics. The sum of the resulting log-probabilities is used as an outlier metric. ECOD~\cite{li_ecod_2022} uses a different notion of density and estimates the cumulative distribution function (CDF) for each feature in the data. It then uses the tail probabilities from each learned CDF to designate samples as anomalous.
+Lastly, many \textit{non-deep learning} approaches are still being developed for anomaly detection. COPOD~\cite{copod} is a parameter-free, highly interpretable outlier detection algorithm based on empirical copula models. DoSE~\cite{pmlr-dose} uses Kernel Density Estimates for learning the distribution of an ensemble of data statistics. The sum of the resulting log-probabilities is used as an outlier metric. ECOD~\cite{li_ecod_2022} uses a different notion of density and estimates the cumulative distribution function (CDF) for each feature in the data. It then uses the tail probabilities from each learned CDF to designate samples as anomalous.
 
 \subsection*{Reconstruction based}
 
-Reconstruction models such as autoencoders train a model to reproduce the input image. These models first encode the data into a low-dimensional "bottleneck" embedding, followed by a decoding step. During inference, it is assumed that when given an anomalous sample, the model will output an anomaly-free reconstruction. One can then use the reconstruction error as the anomaly metric. Examples of such methods include vanilla autoencoders trained with a mean-squared objective~\cite{aelu2023}, denoising autoencoders that are trained to reconstruct from a noisy input~\cite{dae-kascenas22a}, and generative autoencoders to `restore` the input~\cite{grahamDenoisingDiffusionModels2023,wyattAnoddpmAnomalyDetection2022}. The latter differ from the former in that they utilize generative models such as diffusion models or VAEs to iteratively remove the anomalies from the input image (hence restoring it to an anomaly-free reconstruction).
+Reconstruction models such as autoencoders train a model to reproduce the input image. These models first encode the data into a low-dimensional ``bottleneck" embedding, followed by a decoding step. During inference, it is assumed that when given an anomalous sample, the model will output an anomaly-free reconstruction. One can then use the reconstruction error as the anomaly metric. Examples of such methods include vanilla autoencoders trained with a mean-squared objective~\cite{aelu2023}, denoising autoencoders that are trained to reconstruct from a noisy input~\cite{dae-kascenas22a}, and generative autoencoders to `restore` the input~\cite{grahamDenoisingDiffusionModels2023,wyattAnoddpmAnomalyDetection2022}. The latter differ from the former in that they utilize generative models such as diffusion models or VAEs to iteratively remove the anomalies from the input image (hence restoring it to an anomaly-free reconstruction).
 A known drawback of all reconstruction models is the lack of specificity in their detection. As no reconstruction is pixel-perfect (especially in terms of image intensities), the output error maps have significant false-positives~\cite{baur2021}. Another drawback of autoencoders is that as their reconstruction abilities improve, their anomaly detection capabilities decrease as the models are better at reconstructing the anomalies.
 
 \subsection*{One-Class Objectives}
