--- a/ch6-ds.tex
+++ b/ch6-ds.tex
@@ -6,14 +6,14 @@ Assuming the underlying model has learned rich information about the data, can i
 % The task was chosen such that \textit{if} a novel insight is derived, it may be of direct use to the medical research community.
 
 % Developmental disorders leading to atypical brain development are commonly diagnosed in children through clinical assessments that measure behavioral response. While effective in diagnosis, behavioral assessments do not provide any insight into the differences in brain morphometry of the neurodivergent cohort.
-Neurodevelopmental disorders are disabilities associated primarily with the functioning of the brain. Certain disorders such as Down Syndrome, Fragile-X Syndrome and Angelman Syndrome can be detected via genetic testing. Others, such as Autism Spectrum Disorder (ASD) and Attention-Deficit/Hyperactivity Disorder (ADHD), are diagnosed through clinical assessments that measure behavioral response. While effective in diagnosis, neither genetic testing nor behavioral assessments provide insight into the differences in \textit{brain morphometry} of the neurodivergent cohort. Furthermore, there is evidence for a heterogeneity in the underlying brain structures for certain brain disorders, such as ASD~\cite{heteroasd}. This implies that the same behavior can be originated from different atypical brain development.
+Neurodevelopmental disorders are disabilities associated primarily with the functioning of the brain. Certain disorders such as Down Syndrome, Fragile-X Syndrome and Angelman Syndrome can be detected via genetic testing. Others, such as Autism Spectrum Disorder (ASD) and Attention-Deficit/Hyperactivity Disorder (ADHD), are diagnosed through clinical assessments that measure behavioral response. While effective in diagnosis, neither genetic testing nor behavioral assessments provide insight into the differences in \textit{brain morphometry} of the neurodivergent cohort. Furthermore, there is evidence for a heterogeneity in the underlying brain structures for certain brain disorders, such as ASD~\cite{heteroasd}. This implies that the same behavior can originate from different atypical brain development.
 
 Existing analyses primarily look at group wise differences of brain features (such as region volumes) between cohorts~\cite{giraultNeurodevelopmentAutismInfancy2020,hamnerPediatricBrainDevelopment2018}, or correlations of said features with a behavioral assessment~\cite{shenSubcorticalBrainDevelopment2022,brainsci12040439}.
 % These analyses fail to produce specific causal relationships between the brain regions and the neurodivergence, as they mainly focus on correlational evidence.
 These analyses forgo a broad study of all brain regions in favor of specific regions that are more relevant to the disorder. This is an understandable trade-off as reserarchers often have strong prior evidence that correlates brain regions to behavioral actions, and have limited time and resources. However, in making this trade-off, these analyses are less likely to uncover novel associations between brain regions and behavioral phenotypes (in the context of the neurodevelopmental disorder).
 Furthermore, the researchers introduce additional biases when they select regions of interest (ROIs) to be studied using their preconceived notions about the disorder.
 
-Herein lies the opportunity for a data-driven methodology to uncover atypically developing ROIs that are reflected in the data but, may be underexplored in the existing  literature. One can task a model to identify subgroups that deviate from the typical (via outlier detection), and subsequently highlight the brain morphometry shared across the subpopulations (via localization).  MSMA, combined with its localization augmentation, naturally allows for such data exploration. This chapter outlines a process through which MSMA was utilized to derive insights about brain MRI data.
+Herein lies the opportunity for a data-driven methodology to uncover atypically developing ROIs that are reflected in the data but, may be underexplored in the existing  literature. One can task a model to identify subgroups that deviate from the typical (via anomaly detection), and subsequently highlight the brain morphometry shared across the subpopulations (via localization).  MSMA, combined with its localization augmentation, naturally allows for such data exploration. This chapter outlines a process through which MSMA was utilized to derive insights about brain MRI data.
 
 \section{A Hypothesis Generating Tool}
 
@@ -35,7 +35,7 @@ Using this visualization the user should be able to observe how samples are dist
 
 It is often desirable to visualize data for the purposes of exploratory research. This poses a problem if we want to visualize the space of score-norms (as a 2D image). While the score-norms are much lower in dimensionality compared to the high resolution MRIs they are derived from, each score-norm vector is still multidimensional. For reference, all of the experiments in this chapter use $L=20$ scales, resulting in a 20-dimensional vector for each sample. One has to utilize a dimensionality reduction algorithm to reduce the space into two or three dimensions so that the points may be visualized on a screen.
 
-This section will briefly go over existing dimensionality reduction algorithms and why they may not be appropriate for our analysis as they can introduce spurious clusters in the visualization. Instead, I will be advocating the use of Self-Organizing Maps (SOM)~\cite{kohonen1990self}  to visualize my data and will discuss its advantages.
+This section will briefly go over existing dimensionality reduction algorithms and why they may not be appropriate for our analysis as they can introduce spurious clusters in the visualization. Instead, I will be advocating the use of Self-Organizing Maps (SOM)~\cite{kohonen1990self} to visualize score-norm data and will discuss its advantages.
 
 
 \subsection*{Common Dimensionality Reduction Algorithms}
@@ -92,7 +92,7 @@ This case study will explore how MSMA can be used to derive scientific insights.
 
 % Choosing a disorder that is relatively well understood allows us to ground our discoveries by comparing to the literature 
 
-Down Syndrome (DS) is one of the most common neurodevelopmental disorder, occurring at a rate of ~1/700 live births~\cite{parker2010updated}. Studies have revealed large deviations from typical development in brain structure of children with DS, with the most pronounced deviation in the total brain volume (TBV). Further, when TBV is accounted for, studies have revealed deviations in specific regions of the brain such as the temporal lobe, cerebellum, and hippocampus~\cite{hamnerPediatricBrainDevelopment2018}. However, there remains a push for developing focused research to elucidate the nature of DS neuroanatomic phenotypes~\cite{hamnerPediatricBrainDevelopment2018}. While individuals with DS present with a rather heterogeneous set of behavioral and cognitive challenges, existing neuroimaging studies investigate atypical brain morphometry in DS from the viewpoint of a single, homogeneous population.
+Down Syndrome (DS) is one of the most common neurodevelopmental disorders, occurring at a rate of ~1/700 live births~\cite{parker2010updated}. Studies have revealed large deviations from typical development in brain structure of children with DS, with the most pronounced deviation in the total brain volume (TBV). Further, when TBV is accounted for, studies have revealed deviations in specific regions of the brain such as the temporal lobe, cerebellum, and hippocampus~\cite{hamnerPediatricBrainDevelopment2018}. However, there remains a push for developing focused research to elucidate the nature of DS neuroanatomic phenotypes~\cite{hamnerPediatricBrainDevelopment2018}. While individuals with DS present with a rather heterogeneous set of behavioral and cognitive challenges, existing neuroimaging studies investigate atypical brain morphometry in DS from the viewpoint of a single, homogeneous population.
 
 This case study aims to uncover brain morphometric phenotypes that are associated with DS, using learned score-estimates. It will incorporate MSMA, SOMs, and Spatial-MSMA to provide a cohesive analysis of structural brain MRIs belonging to a DS cohort. We will be answering the following research questions:
 
@@ -118,6 +118,9 @@ As in Chapter~\ref{ch:localizing}, we will be using samples from the ABCD and HC
 
 Our testing population is retrieved from the Infant Brain Imaging Study (IBIS) study. The goal of the study is to investigate brain development starting from infancy and following up at later ages. The study is primarily focused on investigating Autism Spectrum Disorder (ASD) but has also gathered data for Down's Syndrome. This section will be looking at school-age scans as they best overlap with the ages in the ABCD study. IBIS uses a protocol to determine typically developing children, as a means of obtaining a control population. These control samples have to be non-ASD as well as low-likelihood (no older sibling with ASD). The control population was further filtered using Autism Diagnostic Observation Schedule (ADOS)~\cite{lord2012autism} scores. Specifically, we removed samples that had an ADOS severity score above 2 measured at the age of 2 years.
 
+In addition to the Down Syndrome population, I will consider three other cohorts as out-of-distribution datasets:, ASD, Atypical, and HR-Typical. ASD refers to individuals that have been diagnosed with the Autism Spectrum Disorder. Atypical refers to samples that scored above a threshold of 2 on the ADOS scores, and were thus labelled as outliers. The HR-Typical cohort includes individuals that are considered to have a high likelihood of developing autism, as they have an older sibling with diagnosed ASD. I include these cohorts to give us supplementary information about the phenotypic space that we will be observing.
+% We can expect to see certain patterns such as  
+
 A 3D diffusion model was trained on the ABCD-HCPD dataset. At inference time, the diffusion model was used to obtain score norms for the IBIS data as well as a held out test-set of ABCD-HCPD. A Spatial-MSMA model was also trained on the score-norms of the ABCD-HCPD samples. This allowed us to obtain the voxel-wise anomaly scores for each test sample. These anomaly scores were then averaged according to ROIs retrieved from the AAL atlas~\cite{ROLLS2020116189}. Additionally, a SOM with a height of 7 nodes and width of 9 nodes was trained on the inlier score-norms from all three studies. 
 
 % Additionally, the CSF was also included in the analysis
@@ -125,21 +128,23 @@ A 3D diffusion model was trained on the ABCD-HCPD dataset. At inference time, th
 % \subsection*{Self-Organizing Maps of MSMA reveal a DS Prototype}
 \subsection*{Does MSMA reveal a DS Prototype?}
 
-
-Intuitively, MSMA capture a feature space of atypicality. As such, different regions in the score-norm space may correspond to different manifestations of abnormalities. I argue that we can employ SOM to map the score-norm space and descretize it into phenotypes/prototypes of atypicality. Using SOM, it is possible to explore whether there exist sub-populations in the DS cohort that are differentially expressed in the score-norm space. 
-
-Recall that in SOMs, each sample is matched with one BMU (represented as a cell in the grid). Consider the BMU with the most matches for a particular cohort. I will denote this BMU as the Maximal-Prototype for that cohort. ~\figref{fig:som-abcd} shows a SOM trained on the score-norms of the inliers. The heatmap reflects the neighbouring distances between each grid cell, and can be interpreted as the relative density of each region in the score-norm space.  We can clearly observe a Maximal-Prototype for the DS cohort. Out of 28 DS cases, 16 match this prototype. Interestingly, 12 out of the matching 16 are female, pointing to a female-dominant DS phenotype. Also plotted are prototypes for other cohorts such as ASD and Atypicals. Atypicals refers to samples that scored above a threshold of 2 on the ADOS scores, and were thus labelled as outliers.
-
 \begin{figure}[tbhp]
 \centering
 \includegraphics[width=\textwidth]{figures/som_9x7.png}
 \caption{A Self-Organizing Map trained on score-norms of brain MRIs of typically developing children. The heatmap represents the distance between neighbouring grid cells
 % Overlayed are the distributions of all cohorts matched to each cell in the grid.
 Overlayed are the prototypes for different cohorts.
-The markers are scaled according to the number of samples matching the BMU at that location. Protoypes for Autism (ASD), inliers (HR-Typical), and outliers (Atypicals) are also displayed for reference. Markers are scaled by the number of matching samples. Note the Maximal-Prototype for DS is significantly larger than the rest. 
+The markers are scaled according to the number of samples matching the BMU at that location. Protoypes for Autism (ASD), high-risk inliers (HR-Typical), and outliers (Atypicals) are also displayed for reference. Markers are scaled by the number of matching samples. Note the Maximal-Prototype for DS is significantly larger than the rest. 
 }
 \label{fig:som-abcd}
 \end{figure}
+
+Intuitively, MSMA capture a feature space of atypicality. As such, different regions in the score-norm space may correspond to different manifestations of abnormalities. I argue that we can employ SOM to map the score-norm space and descretize it into phenotypes/prototypes of atypicality. Using SOM, it is possible to explore whether there exist sub-populations in the DS cohort that are differentially expressed in the score-norm space. 
+
+Recall that in SOMs, each sample is matched with one BMU (represented as a cell in the grid). Consider the BMU with the most matches for a particular cohort. I will denote this BMU as the \textit{Maximal-Prototype} for that cohort. ~\figref{fig:som-abcd} shows a SOM trained on the score-norms of the inliers. The heatmap reflects the neighbouring distances between each grid cell, and can be interpreted as the relative density of each region in the score-norm space. Cohorts are represented by different markers and colors. Each marker is sized according to the number of samples matching the prototype.
+
+We can observe a Maximal-Prototype for the DS cohort (largest red triangle in Figure~\ref{fig:som-abcd}). Out of 28 DS cases, 16 match this prototype. 12 out of the matching 16 are female, pointing to a female-dominant DS phenotype. Also plotted are prototypes for other cohorts, including autism (ASD), ADOS-atypicals (Atypical), and high-risk inliers (HR-Typical). We observe distinctive patterns in the aforementioned non-DS populations. There is a grouping of ASD, Atypicals, and HR-Typicals. Some of them share the same prototype, hence the overlapping of the markers such as ASD (star) and Atypical (diamond) on the bottom right. Note that these cohorts are determined by considering the likelihood of the individuals to fall on the autism spectrum. Thus, we can postulate that these prototypes reflect some underlying phenotypic similarities between the populations, and that these pheontypes may be relevant to ASD in some manner.
+
 
 \begin{figure}[tbhp]
 \centering
