elucidated cifar som figure

--- a/ch6-ds.tex
+++ b/ch6-ds.tex
@@ -70,12 +70,17 @@ Note that SOMs operate directly in the high-dimensional data space, computing di
 \subsection*{SOMs Identify Prototypes}
 It is helpful to think of SOM as a vector quantization algorithm with a spatial constraint on the codebook of vectors. Thus, each neuron can be interpreted as a prototype in the data-space. The grid-like structure of SOMs provides a natural way to organize these data prototypes. The relative positions of the neurons on the grid reflect their similarities. This spatial organization can aid in identifying patterns, clusters, or relationships within the data that may not be immediately apparent from a scatter plot produced by techniques like t-SNE or UMAP.
 
-To elucidate how one can use SOM to gain insights about the data, recall that each sample is assigned to a single neuron (the sample's BMU). If class labels are available, we can tally up the labels of all the samples that are assigned to a given neuron. The maximally matching label can then be computed for each neuron. This label is often overlayed on top of the map visualization to quickly associate the prototype with a population. ~\figref{fig:som-cifar} shows an example of a SOM trained on the CIFAR-10 score-norms. Overlayed are examples of prototypical BMUs for OOD datasets. The BMUs displayed are those that matched at least 1\% of the samples belonging to the OOD dataset. Note the spread of certain datasets such as SVHN.
+To elucidate how one can use SOM to gain insights about the data, recall that each sample is assigned to a single neuron (the sample's BMU). If class labels are available, we can tally up the labels of all the samples that are assigned to a given neuron. The maximally matching label can then be computed for each neuron. This label is often overlayed on top of the map visualization to quickly associate the prototype with a population. ~\figref{fig:som-cifar} shows an example of a SOM trained on the CIFAR10 score-norms. Overlayed are examples of prototypical BMUs for OOD datasets. The BMUs displayed are those that matched at least 1\% of the samples belonging to the OOD dataset.
+
+We can observe that ImageNet (orange stars) has the highest number of BMUs, which may be explained by the class overlap between ImageNet and CIFAR10. Both datasets comprise natural images, with ImageNet being a superset containing most of the classes present in CIFAR10.
+LSUN and iSUN, which consist of images of locations and scenes (such as bedrooms), have more overlap with each other than they do with CIFAR10. This similarity is reflected on the grid, where BMUs from LSUN and iSUN appear near the edge (as they are semantically dissimilar to CIFAR10) but neighboring one another (as they are semantically similar to each other).
+Finally, note the widespread distribution of SVHN BMUs. As this dataset consists of images of house numbers, it mostly comprises simple shapes like lines and circles. It is possible that these shapes are matching to prototypes that have accentuated shapes, rather than matching based on semantic similarities.
+
 
 \begin{figure}[tbhp]
 \centering
 \includegraphics[width=\textwidth]{figures/cifar_som_hex.png}
-\caption{A 25x25 SOM trained on the score-norms of CIFAR-10. Overlayed are examples of BMUs belonging to OOD data.}
+\caption{A 25x25 SOM trained on the score-norms of CIFAR10. The SOM grid maps the space of typicality, represented by prototypes in the inlying dataset. Overlayed are examples of BMUs that match with at least 1\% of the datasets. Colored markers represent different datasets. Note how ImageNet (natural images) has the most BMUs. LSUN and iSUN appear together and at the edge of the map, as they are images of scenes (such as bedrooms) which have little overlap with CIFAR10. SVHN (images of numbers) has a wide spread of BMUs, which BMUs may be matching to accentuated shapes rather than semantic content. }
 \label{fig:som-cifar}
 \end{figure}
 
@@ -188,14 +193,17 @@ Further analysis revealed that each band captures the \textit{same} samples as w
 \begin{figure}[tbhp]
 \centering
 \includegraphics[width=\textwidth]{figures/roi_boxplot.pdf}
-\caption{Box-Whisker plots of the most significant ROIs that significantly differ between the prototypical DS and non-prototypical DS population. The x-axis represents the anomaly score for each sample. \textit{Higher} values are more anomalous. For reference, the 90-th percentile of the inlier anomaly scores for the given ROI is also plotted (red dashed line). All plotted ROI anomaly scores have statistically significant differences in their medians after Bonferroni correction. }
+\caption{Box-and-Whisker plots of the most significant ROIs that significantly differ between the prototypical DS and non-prototypical DS population. The x-axis represents the anomaly score for each sample. \textit{Higher} values are more anomalous. For reference, the 90-th percentile of the inlier anomaly scores for the given ROI is also plotted (red dashed line). All plotted ROI anomaly scores have statistically significant differences in their medians after Bonferroni correction. }
 \label{fig:roi-box-ds}
 \end{figure}
 
 
 Once a sub-population of the DS cohort is identified, we can begin to explore the brain regions that significantly differ from the rest.  This analysis will use the anomaly scores produced by Spatial-MSMA to quantify the relevance of each region. The goal of the analysis is to determine whether there are regions that are significantly different between the prototype and non-prototype populations. To select anomalous ROIs, the anomaly scores (per region/ROI) were averaged across the DS cohort. Only those regions that had an average above the 90-th percentile with respect to the \textit{inlier} population were retained for the significance analysis.
 
-The filtered set of anomalous ROIs was used to determine whether there exists a distributional shift between the anomaly scores for the prototypical and the non-prototypical samples. Concretely, we will be using the Mann-Whitney U-test; a non-parametric test to compare the medians between two groups. This test is well-suited for our scenario as we do not have a large sample size (16 prototypical, 12 non-prototypical), and thus we cannot expect our populations to follow a Normal distribution. The null hypothesis of this test is that the two groups have the same median, and thus belong to the same underlying distribution. The p-value from the Mann-Whitney U-test represents the probability of observing a test statistic as extreme (or more extreme) as the one calculated, given that the null hypothesis is true. As this analysis will be performing a statistical test for each ROI, it is important to control for the \textit{multiple comparison problem}. One effective method is to correct for the False Discovery Rate (FDR). This correction will adjust the p-values belonging to a set of statistical tests such that a chosen significance level also corresponds to the expected proportion of false positives after thresholding. For instance, if we choose a p-value threshold of $0.01$ after FDR correction, then we can expect 1\% of the significant ROIs to be false positives. This analysis used the Benjamini-Hochberg procedure~\cite{benjamini1995controlling} for controlling FDR.
+The filtered set of anomalous ROIs was used to determine whether there exists a distributional shift between the anomaly scores for the prototypical and the non-prototypical samples. Concretely, we will be using the Mann-Whitney U-test; a non-parametric test to compare the medians between two groups.
+% This test is well-suited for our scenario as we do not have a large sample size (16 prototypical, 12 non-prototypical), and thus we cannot expect our populations to follow a Normal distribution.
+This test is well-suited for our scenario as the sample distributions are long-tailed, and thus we cannot expect our populations to follow a Normal distribution.
+The null hypothesis of this test is that the two groups have the same median, and thus belong to the same underlying distribution. The p-value from the Mann-Whitney U-test represents the probability of observing a test statistic as extreme (or more extreme) as the one calculated, given that the null hypothesis is true. As this analysis will be performing a statistical test for each ROI, it is important to control for the \textit{multiple comparison problem}. One effective method is to correct for the False Discovery Rate (FDR). This correction will adjust the p-values belonging to a set of statistical tests such that a chosen significance level also corresponds to the expected proportion of false positives after thresholding. For instance, if we choose a p-value threshold of $0.01$ after FDR correction, then we can expect 1\% of the significant ROIs to be false positives. This analysis used the Benjamini-Hochberg procedure~\cite{benjamini1995controlling} for controlling FDR.
 
 
 After the first stage filtering, 71 ROIs were identified. The medians of the filtered ROIs were compared across the prototypical and non-prototypical sub-populations.~\figref{fig:roi-box-full-ds} shows the 40 out of the 71 filtered ROIs that were significantly different between the prototypical samples and non-prototypical samples. The significance level was chosen to be a p-value of $0.05$, \textit{after} Bonferroni correction.
