proofread last chapter

--- a/ch6-ds.tex
+++ b/ch6-ds.tex
@@ -252,7 +252,7 @@ First column shows raw scores (percentiles for behavior scores and negative log-
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\textwidth]{figures/roi_full_boxplot.pdf}
-\caption{Box-Whisker plots of all ROIs that significantly differ between the prototypical DS and non-prototypical DS population. The ROIs are plotted in order of significance (from lower p-values to higher).  They-axis represents the anomaly score per sample, higher values indicating the presence of higher anomalies. All plotted ROI anomaly scores have statistically significant differences in their medians \textit{after} Bonferroni correction ($p < 0.05$). }
+\caption{Box- and-Whisker plots of all ROIs that significantly differ between the prototypical DS and non-prototypical DS population. The ROIs are plotted in order of significance (from lower p-values to higher).  They-axis represents the anomaly score per sample, higher values indicating the presence of higher anomalies. All plotted ROI anomaly scores have statistically significant differences in their medians \textit{after} Bonferroni correction ($p < 0.05$). }
 \label{fig:roi-box-full-ds}
 \end{figure}
 
